temp commit for merge

--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -37,6 +37,14 @@
 								placeholder="Last Name" class="form-control" /> 
 						</div>
 					</div>
+
+					<div class="form-group">
+						<div class="col-sm-9">
+							<input type="text" th:field="*{roleString}"
+								   placeholder="Role" class="form-control" />
+						</div>
+					</div>
+
 					<div class="form-group">
 						<div class="col-sm-9">
 							<input type="text" th:field="*{role}"
