--- a/src/main/resources/templates/seller/home.html
+++ b/src/main/resources/templates/seller/home.html
@@ -20,7 +20,7 @@
 
     <form th:action="@{/additem}" method="get">
         <button class="btn btn-md btn-default btn-block" name="Add User"
-                type="Submit">Add User</button>
+                type="Submit">Add Product</button>
     </form>
 
     <div class="panel-group" style="margin-top:40px">
