--- a/src/main/resources/templates/seller/additem.html
+++ b/src/main/resources/templates/seller/additem.html
@@ -15,18 +15,21 @@
     <div class="row">
         <div class="col-md-6 col-md-offset-3">
             <form autocomplete="off" action="#" th:action="@{/additem}"
-                  th:object="${product}" method="post" class="form-horizontal"
+            th:object="${product}" method="post" class="form-horizontal"
                   role="form">
                 <h2>Product Form</h2>
 
                 <div class="form-group">
                     <div class="col-sm-9">
+                        <label th:if="${#fields.hasErrors('productName')}" th:errors="*{productName}" class="validation-message"></label>
                         <input type="text" th:field="*{productName}" placeholder="Product Name"
                                class="form-control" />
                     </div>
                 </div>
                 <div class="form-group">
                     <div class="col-sm-9">
+                        <label th:if="${#fields.hasErrors('price')}" th:errors="*{price}" class="validation-message"></label>
+
                         <input type="number" th:field="*{price}"
                                placeholder="Price" class="form-control" />
                     </div>
@@ -35,6 +38,7 @@
 
                 <div class="form-group">
                     <div class="col-sm-9">
+                        <label th:if="${#fields.hasErrors('quantity')}" th:errors="*{quantity}" class="validation-message"></label>
                         <input type="number" th:field="*{quantity}"
                                placeholder="Quantity" class="form-control" />
                     </div>
@@ -42,6 +46,7 @@
 
                 <div class="form-group">
                     <div class="col-sm-9">
+                        <label th:if="${#fields.hasErrors('description')}" th:errors="*{description}" class="validation-message"></label>
                         <input type="text" th:field="*{description}" placeholder="Description"
                                class="form-control" />
                         <label
