--- a/src/main/resources/templates/seller/additem.html
+++ b/src/main/resources/templates/seller/additem.html
@@ -9,8 +9,9 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
-
-
+<form th:action="@{/seller/home}" method="get">
+    <button class="btn btn-md btn-warning btn-block" type="Submit">Go To Home Page</button>
+</form>
 <div class="container">
     <div class="row">
         <div class="col-md-6 col-md-offset-3">
