--- a/src/main/resources/templates/seller/home.html
+++ b/src/main/resources/templates/seller/home.html
@@ -19,8 +19,13 @@
     </form>
 
     <form th:action="@{/additem}" method="get">
-        <button class="btn btn-md btn-default btn-block" name="Add User"
+        <button class="btn btn-md btn-default btn-block" name="Add Item"
                 type="Submit">Add Product</button>
+    </form>
+
+    <form th:action="@{/viewproducts}" method="get">
+        <button class="btn btn-md btn-default btn-block" name="View Products"
+                type="Submit">View Products</button>
     </form>
 
     <div class="panel-group" style="margin-top:40px">
