--- a/src/main/resources/templates/seller/myproducts.html
+++ b/src/main/resources/templates/seller/myproducts.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <div class="page-header">
-    <h3>My Products </h3>
+    <h3 th:text="${user.getName()} + ' | My Products'"></h3>
 </div>
 <div class="col-md-12 container-fluid">
     <div class="container">
@@ -24,10 +24,10 @@
             </thead>
             <tbody>
                 <tr th:each="product : ${products}">
-                    <td th:text="${product.productName}"></td>
-                    <td th:text="${product.price}"></td>
-                    <td th:text="${product.quantity}"></td>
-                    <td th:text="${product.description}"></td>
+                    <td th:text="${product.getProductName()}"></td>
+                    <td th:text="${product.getPrice()}"></td>
+                    <td th:text="${product.getQuantity()}"></td>
+                    <td th:text="${product.getDescription()}"></td>
                     <td><form th:object="${product}" th:action="@{/seller/edit_product}" method="get">
                         <button class="btn btn-md btn-primary btn-block" name="edit"
                                 type="Submit">Edit</button>
