select quantity field for products in buyer added

--- a/src/main/resources/templates/buyer/viewproducts.html
+++ b/src/main/resources/templates/buyer/viewproducts.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <div class="page-header">
-    <h3 th:text="${user.getName()} + ' | My Products'"></h3>
+    <h3 th:text="${user.getName()} + ' | Products View'"></h3>
 </div>
 <div class="col-md-12 container-fluid">
     <div class="container">
@@ -30,8 +30,12 @@
                 <td th:text="${product.getQuantity()}"></td>
                 <td th:text="${product.getDescription()}"></td>
                 <td th:text="${product.getUser().getName()}"></td>
+
+
                 <td><form th:action="@{/buyer/buy}" method="post">
+
                     <input type="hidden" th:value="${product.getId()}" name="product"/>
+                    <input type="number" name = "quantity" th:placeholder="Quantity" th:value = 1 class="form-control" />
                     <button class="btn btn-md btn-success btn-block" name="Buy"
                             type="Submit">Buy</button>
                 </form>
