--- a/src/main/resources/templates/buyer/viewproducts.html
+++ b/src/main/resources/templates/buyer/viewproducts.html
@@ -3,13 +3,21 @@
       xmlns:th="http://www.thymeleaf.org">
 
 <head>
-    <title>My Products</title>
+    <title>My Cart</title>
     <link rel="stylesheet" type="text/css" th:href="@{/css/home.css}" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script	src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script	src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
+<form th:action="@{/buyer/home}" method="get">
+    <button class="btn btn-md btn-warning btn-block" type="Submit">Go To Home Page</button>
+</form>
+
+<form th:action="@{/buyer/viewcart}" method="get">
+    <input type="hidden" th:value="${cart}" name="cart"/>
+    <button class="btn btn-md btn-warning btn-block" type="Submit">Go To Cart</button>
+</form>
 <div class="page-header">
     <h3 th:text="${user.getName()} + ' | Products View'"></h3>
 </div>
@@ -33,7 +41,6 @@
 
 
                 <td><form th:action="@{/buyer/buy}" method="post">
-
                     <input type="hidden" th:value="${product.getId()}" name="product"/>
                     <input type="number" name = "quantity" th:placeholder="Quantity" th:value = 1 class="form-control" />
                     <button class="btn btn-md btn-success btn-block" name="Buy"
