--- a/src/main/resources/templates/seller/myproducts.html
+++ b/src/main/resources/templates/seller/myproducts.html
@@ -10,6 +10,9 @@
     <script	src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
+<form th:action="@{/seller/home}" method="get">
+    <button class="btn btn-md btn-warning btn-block" type="Submit">Go To Home Page</button>
+</form>
 <div class="page-header">
     <h3 th:text="${user.getName()} + ' | My Products'"></h3>
 </div>
