"I have done delete and edit but edit is horrible right now, I am going to make some big changes that might not work."

--- a/src/main/resources/templates/seller/myproducts.html
+++ b/src/main/resources/templates/seller/myproducts.html
@@ -31,9 +31,12 @@
                     <td th:text="${product.getPrice()}"></td>
                     <td th:text="${product.getQuantity()}"></td>
                     <td th:text="${product.getDescription()}"></td>
-                    <td><form th:object="${product}" th:action="@{/seller/edit_product}" method="get">
-                        <button class="btn btn-md btn-primary btn-block" name="edit"
-                                type="Submit">Edit</button>
+
+                    <td>
+                        <c:url var="${product}" value="@{/seller/edit_product}"/>
+                        <form th:object="${product}" th:action="@{/seller/edit_product}" method="POST">
+                            <input id="product" name="product" type="hidden" th:value="${product.getProductName()}"/>
+                            <button type="Submit" value="edit" class="btn btn-md btn-primary btn-block" name="edit" onClick="return confirm('sure?')">Edit</button>
                         </form>
                     </td>
 
