--- a/src/main/resources/templates/buyer/viewcart.html
+++ b/src/main/resources/templates/buyer/viewcart.html
@@ -24,16 +24,21 @@
         <table class="table">
             <thead>
             <th>Product Name</th>
+            <th>Price</th>
             <th>Quantity</th>
+            <th>Seller</th>
 
             </thead>
             <tbody>
             <tr th:each="cp : ${cartProducts}">
                 <td th:text="${cp.getProduct().getProductName()}"></td>
+                <td th:text="${cp.getProduct().getPrice()}"></td>
                 <td th:text="${cp.getQuantity()}"></td>
+                <td th:text="${cp.getProduct().getUser().getName()}"></td>
             </tr>
             </tbody>
         </table>
+        <h2 th:text="'Total Price:' + ${totalPrice}"></h2>
     </div>
     <form th:action="@{/buyer/viewcart}" method="post">
         <input type="hidden" th:value="${cart.getCartId()}" name="cart"/>
