--- a/src/main/resources/templates/buyer/viewcart.html
+++ b/src/main/resources/templates/buyer/viewcart.html
@@ -40,9 +40,9 @@
         </table>
         <h2 th:text="'Total Price:' + ${totalPrice}"></h2>
     </div>
-    <form th:action="@{/buyer/viewcart}" method="post">
+    <form th:action="@{/buyer/payment}" method="get">
         <input type="hidden" th:value="${cart.getCartId()}" name="cart"/>
-        <button class="btn btn-md btn-warning btn-block" type="Submit">Confirm Cart</button>
+        <button class="btn btn-md btn-warning btn-block" type="Submit">Checkout</button>
     </form>
 
 
