Working cart and payment

--- a/src/main/resources/templates/buyer/home.html
+++ b/src/main/resources/templates/buyer/home.html
@@ -19,7 +19,7 @@
                 type="Submit">Logout</button>
     </form>
 
-    <form th:action="@{/buyer/viewproducts}" method="get">
+    <form th:action="@{/buyer/products}" method="get">
         <button class="btn btn-md btn-default btn-block" name="View Products"
                 type="Submit">View Products</button>
     </form>
