--- a/src/main/resources/templates/buyer/viewcart.html
+++ b/src/main/resources/templates/buyer/viewcart.html
@@ -13,7 +13,7 @@
 <form th:action="@{/buyer/home}" method="get">
     <button class="btn btn-md btn-warning btn-block" type="Submit">Go To Home Page</button>
 </form>
-<form th:action="@{/buyer/viewproducts}" method="get">
+<form th:action="@{/buyer/products}" method="get">
     <button class="btn btn-md btn-warning btn-block" type="Submit">Go To View Products Page</button>
 </form>
 <div class="page-header">
