--- a/src/main/resources/templates/buyer/viewproducts.html
+++ b/src/main/resources/templates/buyer/viewproducts.html
@@ -40,7 +40,14 @@
                 <td th:text="${product.getDescription()}"></td>
                 <td th:text="${product.getUser().getName()}"></td>
 
-                <td><form th:action="@{/buyer/buy}" method="post">
+                <td>
+                    <div th:switch="${errorProduct}">
+                        <p th:case="${product.getId()}" style="color:red;" th:text="${errorMessage}"></p>
+                    </div>
+                    <div th:switch="${successProduct}">
+                        <p th:case="${product.getId()}" style="color:blue;" th:text="${successMessage}"></p>
+                    </div>
+                    <form th:action="@{/buyer/products}" method="post">
                     <input type="hidden" th:value="${product.getId()}" name="product"/>
                     <input type="number" name = "quantity" th:placeholder="Quantity" th:value = 1 class="form-control" />
                     <button class="btn btn-md btn-success btn-block" name="Buy"
