--- a/src/main/resources/templates/buyer/payment.html
+++ b/src/main/resources/templates/buyer/payment.html
@@ -14,7 +14,8 @@
 <div class="col-md-12 container-fluid">
     <div class="container">
         <h2 th:text="'Total Price:' + ${totalPrice}"></h2>
-        <form th:action="@{/buyer/viewproducts}" method="get">
+        <form th:action="@{/buyer/viewcart}" method="post">
+            <input type="hidden" th:value="${cart.getCartId()}" name="cart"/>
             <input type="radio" name="type" value="cod"> Cash on Delivery<br>
             <input type="radio" name="type" value="cc"> Credit Card/Debit Card
             <button class="btn btn-md btn-warning btn-block" type="Submit">Confirm</button>
