--- a/src/main/resources/templates/buyer/home.html
+++ b/src/main/resources/templates/buyer/home.html
@@ -13,6 +13,21 @@
 
 <body>
 <div class="container">
+    <div class="form-group">
+        <div class="col-md-12">
+            <form action="#" th:action="@{/buyer/searchproducts}" method="POST">
+                <div class="row">
+                    <div class="col-md-10">
+                        <input type="text" id="search" name="search" class="form-control input-sm-10" th:placeholder="${search}" />
+                    </div>
+                    <div class="col-md-2">
+                        <button class="btn btn-info btn-sm-10" type="submit">
+                            <i class="glyphicon glyphicon-search"></i>
+                        </button>
+                    </div>
+                </div>
+            </form>
+        </div>
 
     <form th:action="@{/logout}" method="get">
         <button class="btn btn-md btn-danger btn-block" name="registration"
