--- a/src/main/resources/templates/seller/edit_product.html
+++ b/src/main/resources/templates/seller/edit_product.html
@@ -30,6 +30,7 @@
                 <div class="form-group">
                     <div class="col-sm-9">
                         <label th:if="${#fields.hasErrors('productName')}" th:errors="*{productName}" class="validation-message"></label>
+                        <label>Product Name</label>
                         <input type="text" th:field="*{productName}" th:placeholder="${product.getProductName()}"
                                class="form-control" />
                     </div>
@@ -38,6 +39,7 @@
                 <div class="form-group">
                     <div class="col-sm-9">
                         <label th:if="${#fields.hasErrors('price')}" th:errors="*{price}" class="validation-message"></label>
+                        <label>Price</label>
                         <input type="number" th:field="*{price}"
                                th:placeholder="${product.getPrice()}" class="form-control" />
                     </div>
@@ -47,6 +49,7 @@
                 <div class="form-group">
                     <div class="col-sm-9">
                         <label th:if="${#fields.hasErrors('quantity')}" th:errors="*{quantity}" class="validation-message"></label>
+                        <label>Quantity</label>
                         <input type="number" th:field="*{quantity}"
                                th:placeholder="${product.getQuantity()}" class="form-control" />
                     </div>
@@ -55,6 +58,7 @@
                 <div class="form-group">
                     <div class="col-sm-9">
                         <label th:if="${#fields.hasErrors('description')}" th:errors="*{description}" class="validation-message"></label>
+                        <label>Description</label>
                         <input type="text" th:field="*{description}" th:placeholder="${product.getDescription()}"
                                class="form-control" />
                         <label
