--- a/src/main/resources/templates/buyer/viewproducts.html
+++ b/src/main/resources/templates/buyer/viewproducts.html
@@ -19,6 +19,22 @@
     <button class="btn btn-md btn-warning btn-block" type="Submit">Go To Cart</button>
 </form>
 
+<div class="form-group">
+    <div class="col-md-12">
+        <form action="#" th:action="@{/buyer/searchproducts}" method="POST">
+            <div class="row">
+                <div class="col-md-10">
+                    <input type="text" id="search" name="search" class="form-control input-sm-10" th:placeholder="${search}" />
+                </div>
+                <div class="col-md-2">
+                    <button class="btn btn-info btn-sm-10" type="submit">
+                        <i class="glyphicon glyphicon-search"></i>
+                    </button>
+                </div>
+            </div>
+        </form>
+    </div>
+
 <div class="page-header">
     <h3 th:text="${user.getName()} + ' | Products View'"></h3>
 </div>
