--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,36 +1,55 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:th="http://www.thymeleaf.org">
+	  xmlns:th="http://www.thymeleaf.org">
 
 <head>
 	<title>Spring Security Tutorial</title>
 	<link rel="stylesheet" type="text/css" th:href="@{/css/login.css}" />
+	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 
 <body>
-	<form th:action="@{/registration}" method="get">
-		<button class="btn btn-md btn-warning btn-block" type="Submit">Go To Registration Page</button>
-	</form>	
-	
 	<div class="container">
-		<img th:src="@{/images/login.jpg}" class="img-responsive center-block" width="300" height="300" alt="Logo" />
-		<form th:action="@{/login}" method="POST" class="form-signin">
-			<h3 class="form-signin-heading" th:text="Welcome"></h3>
-			<br/>
-			 
-			<input type="text" id="username" name="username"  th:placeholder="Username"
-				class="form-control" /> <br/> 
-			<input type="password"  th:placeholder="Password"
-				id="password" name="password" class="form-control" /> <br /> 
-				
-			<div align="center" th:if="${param.error}">
-				<p style="font-size: 20; color: #FF1C19;">Username or Password invalid, please verify</p>
+		<div class="row">
+			<div class="col-md-6 col-md-offset-3">
+				<div class="panel panel-login">
+					<div class="panel-body">
+						<div class="row">
+							<div class="col-lg-12">
+								<form id="login-form" th:action="@{/login}" method="POST" role="form" style="display: block;">
+									<h2>LOGIN</h2>
+									<div class="form-group">
+										<input type="text" name="username" id="username" tabindex="1" class="form-control" th:placeholder="Username" value="">
+									</div>
+									<div class="form-group">
+										<input type="password" name="password" id="password" tabindex="2" class="form-control" th:placeholder="Password">
+									</div>
+									<div align="center" th:if="${param.error}">
+										<p style="font-size: 20; color: #FF1C19;">Username or Password invalid, please verify</p>
+									</div>
+									<div class="col-xs-6 form-group pull-right">
+										<input type="submit" name="login-submit" id="login-submit" tabindex="4" class="form-control btn btn-login" value="Log In">
+									</div>
+								</form>
+							</div>
+						</div>
+					</div>
+					<div class="panel-heading">
+						<div class="row">
+							<div class="col-xs-6 tabs">
+								<a th:href="@{/}" method="get" class="active" id="login-form-link"><div class="login">LOGIN</div></a>
+							</div>
+							<div class="col-xs-6 tabs">
+								<a th:href="@{/registration}" method="get" id="register-form-link"><div class="register">REGISTER</div></a>
+							</div>
+						</div>
+					</div>
+				</div>
 			</div>
-			<button class="btn btn-lg btn-primary btn-block" name="Submit" value="Login" type="Submit" th:text="Login"></button>
-		</form>
+		</div>
 	</div>
 </body>
 </html>
