--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -4,80 +4,81 @@
 <head>
 	<title>Registration Form</title>
 	<link rel="stylesheet" type="text/css" th:href="@{/css/registration.css}" />
+	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
-	<form th:action="@{/}" method="get">
-		<button class="btn btn-md btn-warning btn-block" type="Submit">Go To Login Page</button>
-	</form>	
-	
 	<div class="container">
 		<div class="row">
 			<div class="col-md-6 col-md-offset-3">
-				<form autocomplete="off" action="#" th:action="@{/registration}"
-					th:object="${user}" method="post" class="form-horizontal"
-					role="form">
-					<h2>Registration Form</h2>
+				<div class="panel panel-login">
+					<div class="panel-body">
+						<div class="row">
+							<div class="col-lg-12">
+								<form id="register-form" th:action="@{/registration}" method="post" th:object="${user}" role="form">
+									<h2>REGISTER</h2>
+									<div class="form-group">
+										<label th:if="${#fields.hasErrors('name')}" th:errors="*{name}" ></label>
+										<input type="text" th:field="*{name}" placeholder="Name"
+											   class="form-control" />
+									</div>
 
-					<div class="form-group">
-						<div class="col-sm-9">
-						<label th:if="${#fields.hasErrors('name')}" th:errors="*{name}" class="validation-message"></label>
-						<input type="text" th:field="*{name}" placeholder="Name"
-								class="form-control" /> 
-						</div>
-					</div>
+									<div class="form-group">
+										<label	th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}"
+										></label>
+										<input type="text" th:field="*{lastName}"
+											   placeholder="Last Name" class="form-control" />
+									</div>
 
-					<div class="form-group">
-						<div class="col-sm-9">
-						<label	th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}"
-								class="validation-message"></label>
-							<input type="text" th:field="*{lastName}"
-								placeholder="Last Name" class="form-control" /> 
-						</div>
-					</div>
+									<div class="form-group">
+										<label>Admin</label>
+										<input type="radio" th:field="*{role}" th:value="1" />
+										<label>Buyer</label>
+										<input type="radio" th:field="*{role}" th:value="2" />
+										<label>Seller</label>
+										<input type="radio" th:field="*{role}" th:value="3" />
+									</div>
 
-					<div class="form-group">
-						<div class="col-sm-9">
-							<label>Admin</label>
-							<input type="radio" th:field="*{role}" th:value="1" />
-							<label>Buyer</label>
-							<input type="radio" th:field="*{role}" th:value="2" />
-							<label>Seller</label>
-							<input type="radio" th:field="*{role}" th:value="3" />
-							<!--<input type="text" th:field="*{role}"-->
-								   <!--placeholder="Role" class="form-control" />-->
+									<div class="form-group">
+										<input type="text" th:field="*{username}" placeholder="Username"
+											   class="form-control" />
+										<label
+												th:if="${#fields.hasErrors('username')}" th:errors="*{username}"
+										></label>
+									</div>
+									<div class="form-group">
+										<input type="password" th:field="*{password}"
+											   placeholder="Password" class="form-control" /> <label
+											th:if="${#fields.hasErrors('password')}" th:errors="*{password}"
+									></label>
+									</div>
+									<div class="form-group">
+										<div class="row">
+											<div class="col-sm-6 col-sm-offset-3">
+												<input type="submit" name="register-submit" id="register-submit" tabindex="4" class="form-control btn btn-register" value="Register Now">
+											</div>
+										</div>
+									</div>
+									<span th:utext="${successMessage}"></span>
+								</form>
+							</div>
 						</div>
 					</div>
-
-					<div class="form-group">
-						<div class="col-sm-9">
-							<input type="text" th:field="*{username}" placeholder="Username"
-								class="form-control" />
-							<label
-								th:if="${#fields.hasErrors('username')}" th:errors="*{username}"
-								class="validation-message"></label>
+					<div class="panel-heading">
+						<div class="row">
+							<div class="col-xs-6 tabs">
+								<a th:href="@{/}" method="get" class="active" id="login-form-link"><div class="login">LOGIN</div></a>
+							</div>
+							<div class="col-xs-6 tabs">
+								<a th:href="@{/registration}" method="get" id="register-form-link"><div class="register">REGISTER</div></a>
+							</div>
 						</div>
 					</div>
-					<div class="form-group">
-						<div class="col-sm-9">
-							<input type="password" th:field="*{password}"
-								placeholder="Password" class="form-control" /> <label
-								th:if="${#fields.hasErrors('password')}" th:errors="*{password}"
-								class="validation-message"></label>
-						</div>
-					</div>
-					<div class="form-group">
-						<div class="col-sm-9">
-							<button type="submit" class="btn btn-primary btn-block">Register User</button>
-						</div>
-					</div>
-					<span th:utext="${successMessage}"></span>
-				</form>
+				</div>
 			</div>
 		</div>
 	</div>
-
 </body>
 </html>
