implement seller history

--- a/src/main/resources/templates/seller/home.html
+++ b/src/main/resources/templates/seller/home.html
@@ -28,6 +28,11 @@
                 type="Submit">View My Products</button>
     </form>
 
+    <form th:action="@{/seller/sellerhistory}" method="get">
+        <button class="btn btn-md btn-default btn-block" name="Product History"
+                type="Submit">Product History</button>
+    </form>
+
     <div class="panel-group" style="margin-top:40px">
         <div class="panel panel-primary">
             <div class="panel-heading">
