--- a/src/main/resources/templates/buyer/searchproducts.html
+++ b/src/main/resources/templates/buyer/searchproducts.html
@@ -40,7 +40,7 @@
 
 
 <div class="page-header">
-    <h3 th:text="${user.getName()} + ' | ' + ${products.size()} + ' result(s) for  &quot;'+ ${search} + '&quot;'"></h3>
+    <h3 th:text="${searchQueryTitle}"></h3>
 </div>
 <div class="col-md-12 container-fluid">
     <div class="container">
