--- a/src/main/resources/templates/buyer/home.html
+++ b/src/main/resources/templates/buyer/home.html
@@ -18,7 +18,8 @@
             <form action="#" th:action="@{/buyer/searchproducts}" method="POST">
                 <div class="row">
                     <div class="col-md-10">
-                        <input type="text" id="search" name="search" class="form-control input-sm-10" th:placeholder="${search}" />
+                        <input type="text" id="search" name="search" class="form-control input-sm-10" placeholder="" />
+
                     </div>
                     <div class="col-md-2">
                         <button class="btn btn-info btn-sm-10" type="submit">
@@ -34,10 +35,11 @@
                 type="Submit">Logout</button>
     </form>
 
-    <form th:action="@{/buyer/products}" method="get">
-        <button class="btn btn-md btn-default btn-block" name="View Products"
+        <form action="#" th:action="@{/buyer/searchproducts}" method="POST">
+            <input type="text" id="search" name="search" class="form-control input-sm-10" placeholder="" type="hidden"/>
+            <button class="btn btn-md btn-default btn-block" name="View Products"
                 type="Submit">View Products</button>
-    </form>
+        </form>
 
     <form th:action="@{/buyer/purchasehistory}" method="get">
         <button class="btn btn-md btn-default btn-block" name="View Purchase History"
